[package]
name = "re_sdk_comms"
authors.workspace = true
description = "TCP communication between Rerun SDK and Rerun Server"
edition.workspace = true
homepage.workspace = true
include.workspace = true
license.workspace = true
publish = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true


[features]
## Enable the client (SDK-side).
client = ["re_log_encoding/encoder"]

## Enable the server.
server = ["rand", "re_log_encoding/decoder"]


[dependencies]
re_build_info.workspace = true
re_log_encoding.workspace = true
re_log_types.workspace = true
re_log.workspace = true
re_smart_channel.workspace = true

ahash.workspace = true
crossbeam.workspace = true
document-features.workspace = true
thiserror.workspace = true

# Optional dependencies:

# We use rand for the congestion manager
rand = { workspace = true, optional = true, features = [
  "std",
  "std_rng",
  "small_rng",
] }
tonic = "=0.12.1"
prost = "0.13.2"
tokio-stream = "0.1.15"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
async-stream = "0.3.5"

[build-dependencies]
# need rust 1.80+ for 0.12.2, otherwise build explodes
tonic-build = "=0.12.1"
